assets/css/style.css
/*--------- default styles -----*/

* {
    margin: 0;
    padding: 0;
    border: 0;
    outline: 0;
    vertical-align: 0;
    position: relative; 
    overflow-x: hidden;
}

/*--------------- coloring ---------*/

.navbar {
    background-color: rgba(95, 155, 245, 0.7);
}

body {
    background-color: #FCF5E5;
}
/*--------- navbar -----*/

.nav-logo {
    width: 80px;
    height: 80px;
    border-radius: 40px;
}

.nav-logo-container {
    padding-right: 5px;
}

.navbar a {
    font-family: "Mukta", sans-serif;
    font-weight: 500;
    font-size: 22pt;
    text-align: end;
}

.navbar-brand {
    font-size: 2rem;
}

/*----media quereis----*/

@media screen and  (max-width: 600px) {
    .nav-logo-container {
        display: none;
    }

    .who-what-area {
        margin: 8px;
    }

    .index-img-2 {
        display: none;
    } 
}

/*--------- index styling -----*/

.index-img-1 {
    background-image: url(/assets/images/index-hero.avif);
    background-size: cover;
    background-position: right 90% ;
    height: 250px;
    width: 500px;
    margin: 20px;
    object-fit: scale-down;
}

.index-img-2 {
    background-image: url(/assets/images/teste-hero.avif);
    background-size: cover;
    background-position: center;
    height: 250px;
    width: 500px;
    margin: 20px;
}

.flex-container {
    display: flex;
    flex-direction: row;
    height: max-content;
    flex-wrap: wrap;
    justify-content: center;
}

.who-what-area {
    border-color: #FCF5E5;
    max-width: 300px;
    text-align: center;
    margin: 16px;
    padding: 4px;
    background: transparent;
    transition: 0.6s;
    height: fit-content;
    overflow: hidden;
}

.who-what-area:hover {
    box-shadow: 0 0 12px;
    height: fit-content;
}

.index-head {
    font-family: "Mukta", sans-serif;
    font-size: 1.8rem;
    color: #000;
}

.index-body {
    font-family: "Mukta", sans-serif;
    font-size: 1.1rem;
    color: #000;
}

.img-container {
    display: flex;
    flex-direction: row;
    height: max-content;
    flex-wrap: wrap;
    justify-content: space-evenly;
}












/*---------map-------

.flex-container {
    display: flex;
    justify-content: center;
    align-items: baseline;
}

.custom-map {
    width: 300px;
    height: 300px;
    margin-bottom: 150px;
}

/*---------button-------

.btn,
.btn a {
    font-family: "Mukta", sans-serif;
}

.help-call {
    color: white;
}

.help-call:hover {
    color: white;
    text-decoration: none;
}

.testes {
    text-align: left;
}

.testes h3 {
    font-size: 1.375rem;
    padding-left: 12px;
}

.testes h4 {
    font-size: 1.25rem;
    padding-left: 12px;
}

.testes p {
    font-size: 1rem;
    text-align: left;
    padding: 12px;
}

/*-------contact form-----

form {
    text-align: center;
    padding-top: 15px;
    padding-bottom: 50px;
}

/*-----footer----

footer {
    background-color: rgba(95, 155, 245, 0.7);
    color: black;
    min-height: 90px;
    margin: 0;
}

.social-links {
    padding-bottom: 15px;
}

.social-links li {
    padding-top: 15px;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    border-radius: 50%;
    font-size: 40px;
    line-height: 7px;
    text-align: left;
    color: #fafafa;
    background: rgba(95, 155, 245, 0.7);
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
}

.social-links li a i:hover {
    background: #537e78;
}

